<!--
  ~ Copyright (c) 2022 Martin Atanasov. All rights reserved.
  ~
  ~ IMPORTANT!
  ~ Use of .xml vector path, .svg, .png and .bmp files, as well as all brand logos,
  ~ is excluded from this license. Any use of these file types or logos requires
  ~ prior permission from the respective owner or copyright holder.
  ~
  ~ This work is licensed under the terms of the MIT license.
  ~ For a copy, see <https://opensource.org/licenses/MIT>.
  -->

<resources>
    <string name="app_name">Oasis</string>
    <string name="app_name_full">Oasis - Color Events</string>
    <string name="creator">Created by Rainbow Infinium</string>
    <string name="app_logo">Application logo</string>
    <string name="developer_name">Martin Atanasov</string>

    <string-array name="skin_array">
        <item>Teal</item>
        <item>Blue</item>
        <item>Black</item>
    </string-array>
    <string-array name="language_array">
        <item>System Default</item>
        <item>English</item>
        <item>Bulgarian</item>
        <item>Russian</item>
    </string-array>
    <string-array name="color_picker_array">
        <item>Default</item>
        <item>Sky blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Gray</item>
    </string-array>
    <!--    My Menu-->
    <string name="my_menu_options">Options</string>
    <string name="my_menu_dell">Delete all</string>
    <string name="my_menu_advanced">Advanced tools</string>
    <string name="my_menu_search">Search</string>
    <!--    Drawer Menu-->
    <string name="drawer_statistic">Statistic</string>
    <string name="drawer_app">Application</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_total">Total events</string>
    <string name="drawer_sound_notifications">Active alarms</string>
    <string name="drawer_one_priority_important">Important</string>
    <string name="drawer_two_priority_regular">Regular</string>
    <string name="drawer_three_priority_unimportant">Unimportant</string>
    <string name="drawer_about">About DEV</string>
    <string name="drawer_website">Website</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="location">Location</string>
    <string name="hintTitle">Event Title</string>
    <string name="hintLocation">Add Location</string>
    <string name="hintFindLocation">Find location</string>
    <string name="hintNote">Add your event node</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="allDay">All day event</string>
    <string name="pickColor">Event color</string>
    <string name="priorityIcon">Priority</string>
    <string name="default_value">Default</string>
    <string name="silentNotifications">Silent notifications</string>
    <string name="alarmNotifications">Sound notifications</string>
    <string name="error_404">Error: 404
 Check your internet connection</string>
    <!--    tutorial fragments-->
    <string name="description_first_fragment">Create and edit events</string>
    <string name="description_second_fragment">Enter your data to the text fields</string>
    <string name="description_third_fragment">Find location</string>
    <string name="add_item">Add item</string>
    <string name="scroll_top">Scroll to the top</string>
    <string name="fragThreeHeader">Add location to your event</string>
    <string name="fragTwoHeader">Create you own event</string>
    <string name="fragOneHeader">Welcome to tutorial guide</string>
    <string name="checkInfoDev">About application</string>
    <!--    Description-->
    <string name="startDate">Event start date</string>
    <string name="endDate">Event end date</string>
    <string name="startTime">Event start time</string>
    <string name="endTime">Event end time</string>
    <string name="loadWelcomeImage">Load welcome image</string>
    <string name="loadAppVersion">Load application version</string>
    <string name="descImportant">Set event status to important</string>
    <string name="descRegular">Set event status to regular</string>
    <string name="descUnimportant">Set event status to unimportant</string>
    <!--    Menu-->
    <string name="forceDarkMode">Force dark mode</string>
    <string name="skinColor">Skin color</string>
    <string name="language">Language</string>
    <string name="fontSize">Font size</string>
    <!--    Alert Dialog-->
    <string name="alert_dialog_title">Delete all</string>
    <string name="alert_dialog_message_dell">Are you sure you want to delete all data</string>
    <string name="alert_dialog_message_sure_to_dell">Are you sure you want to delete this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="select_priority">Select event priority</string>
    <string name="dialog_priority">Priority Dialog</string>
    <!--    Toast-->
    <string name="toast_failed">Failed</string>
    <string name="toast_no_data">There is no data</string>
    <string name="toast_added">Added Successfully</string>
    <string name="toast_failed_to_update">Failed to Updated</string>
    <string name="toast_successfully_updated">Successfully Updated!</string>
    <string name="toast_fail_to_delete">Fail to delete</string>
    <string name="toast_successfully_deleted">Successfully deleted</string>
    <string name="toast_enter_location">Please enter a location</string>
    <string name="toast_not_found_location">Location not found</string>
    <string name="toast_error_search_location">Error searching location</string>
    <string name="toast_invalid_time">Invalid time: End time cannot be before start time!</string>
    <!--    Priority picker-->
    <string name="set_important">Important</string>
    <string name="set_regular">Regular</string>
    <string name="set_unimportant">Unimportant</string>
    <string name="events_chart">Events chart - DEMO</string>
    <string name="events">Events</string>
    <!--    Manifest label activity-->
    <string name="chart">Chart</string>
    <string name="add_event">Add Event</string>
    <!--    Color description-->
    <string name="default_color">Default color</string>
    <string name="sky_blue_color">Sky blue color</string>
    <string name="green_color">Green color</string>
    <string name="yellow_color">Yellow color</string>
    <string name="orange_color">Orange color</string>
    <string name="red_color">Red color</string>
    <string name="blue_color">Blue color</string>
    <string name="purple_color">Purple color</string>
    <string name="brown_color">Brown color</string>
    <string name="grey_color">Gray color</string>
    <string name="channel_description_sound_notifications">Sound notification channel</string>
    <!--    <string name="channel_description_regular">Regular notification</string>-->
    <string name="channel_description_silent_notifications">Silent notification channel</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="alarm_information">Alarm information</string>
    <string name="permission_reason">In order to show notifications permission is required!</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="toast_fail_to_remove_alarm">Alarm is not removed!</string>
    <string name="toast_alarm_cancel">Alarm cancel!</string>
    <string name="no_data_to_show">You don\'t have any events!</string>
    <!-- Validation -->
    <string name="event_title_empty">Title should contain at least 2 symbols!</string>
    <string name="find_location">Find Location</string>
    <string name="search">Search</string>
    <string name="confirm_btn">Confirm</string>
    <!-- Notifications -->
    <string name="alarms_active_title">Active alarms</string>
    <string name="alarms_active_content_text">You have active alarms</string>
    <string name="sound_notifications_name">Sound Notifications</string>
    <string name="sound_notifications_description">Channel for sound notifications</string>
    <string name="silent_notifications_title">Silent notifications</string>
    <string name="silent_notifications_content_text">You have new notes</string>
    <string name="silent_notifications_name">Silent notifications</string>
    <string name="silent_notifications_description">Channel for silent notifications</string>
    <string name="channel_name_silent_notifications">Silent notifications</string>
    <string name="channel_name_sound_notifications">Sound notifications</string>

    <!-- Sorting & Filtering -->
    <string name="filter_title">Filters</string>
    <string name="filter_order_label">Order Filter</string>
    <string name="filter_priority_label">Priority Filter</string>
    <string name="filter_a_z">A-Z</string>
    <string name="filter_z_a">Z-A</string>
    <string name="filter_date">Date</string>
    <string name="filter_reverse_date">Reverse Date</string>
    <string name="filter_no_preference">No preference</string>
    <string name="about_dev_info">Created by:\n\n%1$s\n\nVersion %2$s</string>
    <string name="filter_summary_format">Filter - %1$s, %2$s</string>
    <string name="filter_icon">Filter icon</string>
</resources>
