<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Martin Atanasov. All rights reserved.
  ~
  ~ IMPORTANT!
  ~ Use of .xml vector path, .svg, .png and .bmp files, as well as all brand logos,
  ~ is excluded from this license. Any use of these file types or logos requires
  ~ prior permission from the respective owner or copyright holder.
  ~
  ~ This work is licensed under the terms of the MIT license.
  ~ For a copy, see <https://opensource.org/licenses/MIT>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <item android:title="@string/drawer_statistic">
        <menu>
            <group android:checkableBehavior="none">
                <item android:id="@+id/totalCount"
                    android:icon="@drawable/ic_stats_all"
                    android:title="@string/drawer_total"/>
                <item android:id="@+id/activeAlarms"
                    android:icon="@drawable/ic_alarm"
                    android:title="@string/drawer_sound_notifications"/>
                <item android:id="@+id/importantEvents"
                    android:icon="@drawable/ic_important_priority"
                    android:title="@string/drawer_one_priority"/>
                <item android:id="@+id/regularEvents"
                    android:icon="@drawable/ic_regular_priority"
                    android:title="@string/drawer_two_priority"/>
                <item android:id="@+id/lowPriorityEvents"
                    android:icon="@drawable/ic_unimportant_priority"
                    android:title="@string/drawer_three_priority"/>
            </group>
        </menu>
   </item>

    <item android:title="@string/drawer_app">
        <menu>
            <group android:checkableBehavior="none">
                <item android:id="@+id/website"
                    android:icon="@drawable/ic_website"
                    android:title="@string/drawer_website"/>
                <item android:id="@+id/events_chart"
                    android:icon="@drawable/ic_chart"
                    android:title="@string/events_chart"/>
                <item android:id="@+id/about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/drawer_about"/>
                <item android:id="@+id/exit"
                    android:icon="@drawable/ic_power_off"
                    android:title="@string/drawer_exit"/>
            </group>
        </menu>
    </item>
</menu>
