<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Martin Atanasov. All rights reserved.
  ~
  ~ IMPORTANT!
  ~ Use of .xml vector path, .svg, .png and .bmp files, as well as all brand logos,
  ~ is excluded from this license. Any use of these file types or logos requires
  ~ prior permission from the respective owner or copyright holder.
  ~
  ~ This work is licensed under the terms of the MIT license.
  ~ For a copy, see <https://opensource.org/licenses/MIT>.
  -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.main.MainActivity">

    <!--    Add to DrawerLayout to preview-->
    <!--    tools:openDrawer="start">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true">

        <!--    Navigation bar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="?attr/customColorValue"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
            app:title="@string/app_name"
            app:titleTextColor="?attr/customColorValue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/sortBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/filter_icon"
                    android:src="@drawable/ic_filter_events"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/txtFilterSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortBar" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="64dp"
            android:clickable="true"
            android:contentDescription="@string/add_item"
            android:elevation="6dp"
            android:focusable="true"
            android:text="@string/add_event"
            app:icon="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/mainContainer"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scrollTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="58dp"
            android:clickable="true"
            android:contentDescription="@string/scroll_top"
            android:elevation="6dp"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/ic_arrow_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>